[package]
name = "music-player"
version = "0.1.0"
edition = "2021"

[package.metadata.winres]
manifest = false

[dependencies]
discord-rich-presence = "1.0.0"
eframe = {version = "0.32.3", features = ["persistence"]}
egui = "0.32.3"
egui_dnd = "0.13.0"
image = "0.25.8"
lofty = "0.22.4"
rand = "0.9.2"
rfd = "0.15.4"
rodio = {version = "0.21.1", features = ["symphonia-all", "playback"] }

[[bin]]
name = "Coral"
path = "src/main.rs"
